# Project_CSC51073-NAZARET-DUBOISSEY

./: .gitignore  .latexmkrc  CMakeLists.txt  MLpipeline.py  MlTools.py  Nlib.py  README.md  calibration_data.npz  eyeToolKit.py  face_data1762936680.csv  face_data1762938491.csv  face_data1762938522.csv  face_data1762938588.csv  face_data1762938683.csv  face_data1762941397.csv  firstTest.py  implementationAlgo2007.py  pyproject.toml  sandbox.ipynb  test.py
include/: EyeToolKit.h  Nlib.h
python_vision/: Nlib.py  cameraCalibration.py  csv_log.py  eyeToolKit.py  eye_mlp_model.pth  faceAnalyser.py  faceMath.py  firstTest.py  implementationAlgo2007.py  morse_decoder.py  mouseController.py  pupil_detector_mediapipe.py  renderer3D.py  sandbox.ipynb  screenCalibrationTool.py  test_world_landmarks.py  utils.py
python_vision/dataset_build/: pupilcenter.py
python_vision/eyeTracker/: Nlib.py  click_manager.py  eyeToolKit.py  eye_tracking.py  faceAnalyser.py  landmarks.py  pupil_detector_mediapipe.py  renderer3D.py
python_vision/morse_decoder/: __init__.py  pupil_decoder.py
rapport/: .gitignore  presentation.tex  rapport.aux  rapport.fdb_latexmk  rapport.fls  rapport.out  rapport.tex  rapport.toc
rapport/.latex/: presentation.nav
rapport/src/: polytechnique.sty
src/: CMakeLists.txt  EyeToolKit.cpp  Nlib.cpp  firstTest.cpp  test.cpp
