[project]
name = "projet_vision"
version = "0.1.0"
description = "Eye tracking and gaze estimation project"
requires-python = ">=3.8,<3.13"
dependencies = [
    "opencv-python>=4.12.0",
    "mediapipe>=0.10.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
]


